<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:weightSum="6">


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:background="@android:color/darker_gray">
    </View>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space2"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/RatingBar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
         />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu_place_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        fab:fab_addButtonPlusIconColor="@color/colorPrimaryDark"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_event_note_black_24dp"
            fab:fab_title="@string/option_create_plan_label" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_save_black_24dp"
            fab:fab_title="@string/option_save_place_label" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/call_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_call_black_24dp"
            fab:fab_title="@string/option_to_call_place_label" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>